--- a/index.html
+++ b/index.html
@@ -7,14 +7,14 @@
     <meta name="description" content="Lovable Generated Project" />
     <meta name="author" content="Lovable" />
 
-    <meta property="og:title" content="quickqr-easy-access" />
-    <meta property="og:description" content="Lovable Generated Project" />
+    <meta property="og:title" content="QeCreator" />
+    <meta property="og:description" content="One Scan. Full Access. Total Impression." />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta property="og:image" content="/ChatGPT Image May 23, 2025, 12_08_02 AM.png" />
 
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:site" content="@lovable_dev" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta name="twitter:image" content="/ChatGPT Image May 23, 2025, 12_08_02 AM.png" />
   </head>
 
   <body>
