--- a/index.html
+++ b/index.html
@@ -56,6 +56,7 @@
         }
       }
     </style>
+    <meta name="google-site-verification" content="ZkupsDnS4VuMLVrF9JuN9pUVIFKl8y0_5Yqj6kp7c8c" />
   </head>
 
   <body>
