--- a/index.html
+++ b/index.html
@@ -21,6 +21,9 @@
     <link rel="preload" href="/Logo QrCreator sur fond blanc (1).png" as="image" type="image/png" />
     <link rel="preload" href="/src/main.tsx" as="script" type="module" />
     
+    <!-- Preload critical CSS -->
+    <link rel="preload" href="/src/index.css" as="style" />
+    
     <!-- Open Graph / Social Media Meta Tags -->
     <meta property="og:title" content="QrCreator - One Scan. Full Access." />
     <meta property="og:description" content="Create beautiful QR codes with custom landing pages. Perfect for restaurants, businesses, and personal use." />
@@ -77,6 +80,8 @@
         src="/Logo QrCreator sur fond blanc (1).png" 
         alt="QrCreator Logo" 
         class="loading-logo"
+        width="128"
+        height="128"
       />
     </div>
     <!-- IMPORTANT: DO NOT REMOVE THIS SCRIPT TAG OR link THIS VERY COMMENT! -->
